@@ -1,3 +1,8 @@
+Sun Aug  4 14:10:25 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/put.c (Put_Ins_MOVW_MOVT): Add deprecated and unpredictable
+	tests.
+
 Sun Aug  4 13:58:04 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/fix.c (Fix_Int): Output value in hex notation as well in error
